FloatingActionButton layouts fixed warnings

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,10 +42,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
         android:clickable="true"
+        android:focusable="true"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/appbar"
-        tools:srcCompat="@android:drawable/sym_action_chat" />
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:srcCompat="@android:drawable/sym_action_chat"
+        android:layout_marginEnd="8dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
