--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,101 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.LoginActivity">
+    android:orientation="vertical"
+    android:gravity="center"
+    android:padding="10sp">
+
 
     <TextView
-        android:id="@+id/appName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="167dp"
-        android:layout_marginLeft="167dp"
-        android:layout_marginTop="233dp"
-        android:layout_marginEnd="185dp"
-        android:layout_marginRight="185dp"
-        android:layout_marginBottom="479dp"
-        android:gravity="center|center_horizontal|center_vertical"
-        android:text="@string/encrypta"
-        android:textSize="50sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.437"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/username"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="189dp"
-        app:layout_constraintBottom_toTopOf="@+id/appName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/editTextUser"
-        android:layout_width="310dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="43dp"
-        android:layout_marginEnd="51dp"
-        android:layout_marginRight="51dp"
-        android:layout_marginBottom="340dp"
-        android:hint="@string/Enter_username"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appName" />
+        android:id="@+id/textView3"
+        android:layout_width="396dp"
+        android:layout_height="63dp"
+        android:layout_above="@+id/username"
+        android:layout_alignParentTop="true"
+        android:layout_marginBottom="29dp"
+        android:layout_marginTop="134dp"
+        android:text="@string/sign_in"
+        android:textAlignment="center"
+        android:textSize="35sp" />
 
     <EditText
-        android:id="@+id/editTextPassword"
-        android:layout_width="310dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="51dp"
-        android:layout_marginRight="51dp"
-        android:layout_marginBottom="266dp"
-        android:ems="10"
-        android:hint="@string/enter_password"
+        android:id="@+id/username"
+        android:layout_width="349dp"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/idSignupPassword"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="22dp"
+        android:layout_marginEnd="57dp"
+        android:layout_marginLeft="72dp"
+        android:layout_marginRight="57dp"
+        android:layout_marginStart="72dp"
+        android:hint="@string/name_hint"
+        android:importantForAutofill="no"
+        android:inputType="textPersonName" />
+
+    <EditText
+        android:id="@+id/idSignupPassword"
+        android:layout_width="272dp"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/idbuttonSignup"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="49dp"
+        android:layout_marginEnd="57dp"
+        android:layout_marginLeft="72dp"
+        android:layout_marginRight="57dp"
+        android:layout_marginStart="72dp"
+        android:hint="@string/password_hint"
         android:inputType="textPassword"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextUser"
-        android:autofillHints="" tools:targetApi="o" />
+        android:importantForAutofill="no" />
 
     <Button
-        android:id="@+id/buttonCreateAccount"
+        android:id="@+id/idbuttonSignup"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="161dp"
-        android:layout_marginLeft="161dp"
-        android:layout_marginEnd="162dp"
-        android:layout_marginRight="162dp"
-        android:layout_marginBottom="104dp"
-        android:text="@string/create_an_account"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_height="27dp"
+
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="307dp"
+        android:layout_marginEnd="163dp"
+        android:layout_marginLeft="169dp"
+        android:layout_marginRight="163dp"
+        android:layout_marginStart="169dp"
+        android:background="#D3D3D3"
+        android:hint="@string/log_in" />
 
     <Button
-        android:id="@+id/buttonLogIn"
+        android:id="@+id/button"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
-        android:layout_marginBottom="41dp"
-        android:text="@string/log_in"
-        app:layout_constraintBottom_toTopOf="@+id/buttonCreateAccount"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="33dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="55dp"
+        android:layout_marginLeft="38dp"
+        android:layout_marginStart="38dp"
+        android:background="#00FFFFFF"
+        android:hint="@string/forgot_password"
+        android:shadowColor="@color/colorPrimary"
+        android:textColor="#4DB6AC"
+        android:textColorHint="" />
+
+
+</RelativeLayout>
