--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -45,18 +45,18 @@
         android:layout_width="272dp"
         android:layout_height="wrap_content"
         android:layout_above="@+id/idbuttonSignup"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="49dp"
-        android:layout_marginEnd="57dp"
-        android:layout_marginLeft="72dp"
-        android:layout_marginRight="57dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_marginStart="72dp"
+        android:layout_marginLeft="72dp"
+        android:layout_marginEnd="57dp"
+        android:layout_marginRight="57dp"
+        android:layout_marginBottom="49dp"
         android:hint="@string/password_hint"
-        android:inputType="textPassword"
-        android:importantForAutofill="no" />
+        android:importantForAutofill="no"
+        android:inputType="textPassword" />
 
     <Button
         android:id="@+id/idbuttonSignup"
@@ -86,7 +86,7 @@
         android:hint="@string/forgot_password"
         android:shadowColor="@color/colorPrimary"
         android:textColor="#4DB6AC"
-        android:textColorHint="" />
+        android:textColorHint="#4DB6AC" />
 
 
 </RelativeLayout>
