--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,27 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/coordinatorLayout2"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".Activities.LoginActivity">
+    android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/createAnAccount"
-        android:layout_width="301dp"
-        android:layout_height="58dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginBottom="347dp"
-        android:layout_marginEnd="56dp"
-        android:layout_marginLeft="54dp"
-        android:layout_marginRight="56dp"
-        android:layout_marginStart="54dp"
-        android:layout_marginTop="326dp"
-        android:background="#d3d3d3"
-        android:text="@string/create_account" />
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
+        android:layout_height="72dp"
+        android:layout_above="@+id/createAnAccount"
+        android:layout_marginBottom="28dp"
+        android:text="@string/encrypta"
+        android:textAlignment="center"
+        android:textSize="40sp"
+        android:visibility="visible"
+        tools:visibility="visible" />
 
     <Button
         android:id="@+id/signIn"
@@ -32,45 +24,44 @@
         android:layout_height="28dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginBottom="286dp"
-        android:layout_marginEnd="100dp"
-        android:layout_marginLeft="223dp"
-        android:layout_marginRight="100dp"
-        android:layout_marginStart="223dp"
-        android:layout_marginTop="417dp"
+        android:layout_marginBottom="251dp"
+        android:layout_marginEnd="86dp"
+        android:layout_marginRight="86dp"
         android:background="#00FFFFFF"
-        android:text="@string/log_in"
-        android:visibility="visible" />
+        android:text="@string/sign_in"
+        android:visibility="visible"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_marginBottom="253dp"
+        android:layout_marginEnd="14dp"
+        android:layout_marginRight="14dp"
+        android:layout_toLeftOf="@+id/signIn"
+        android:layout_toStartOf="@+id/signIn"
+        android:text="@string/have_an_account"
+        android:textSize="18sp"
+        android:visibility="visible"
+        tools:visibility="visible" />
+
+    <Button
+        android:id="@+id/createAnAccount"
+        android:layout_width="373dp"
+        android:layout_height="59dp"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginBottom="288dp"
-        android:layout_marginEnd="203dp"
-        android:layout_marginRight="203dp"
-        android:layout_marginTop="419dp"
-
-        android:text="@string/have_an_account"
-        android:textSize="18sp" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="match_parent"
-        android:layout_height="72dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="448dp"
-        android:text="Encrypta"
-        android:textAlignment="center"
-        android:textSize="40sp" />
+        android:layout_marginBottom="304dp"
+        android:layout_marginEnd="21dp"
+        android:layout_marginRight="21dp"
+        android:background="#d3d3d3"
+        android:text="@string/create_account"
+        android:visibility="visible"
+        tools:visibility="visible" />
 
 
 </RelativeLayout>
