--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,52 +7,70 @@
     android:gravity="center"
     android:padding="10sp">
 
+    <Button
+        android:id="@+id/cancel_btn"
+        android:layout_width="91dp"
+        android:layout_height="41dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="5dp"
+        android:background="#0064B5F6"
+        android:text="@string/cancel"
+        android:textColor="#818181" />
+
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="48dp"
+        android:layout_width="392dp"
+        android:layout_height="63dp"
+        android:layout_above="@+id/idSignupEmail"
+        android:layout_marginBottom="32dp"
         android:text="@string/create_account_text"
         android:textAlignment="center"
         android:textSize="30sp" />
 
-    <EditText
-        android:id="@+id/idSignupName"
-        android:layout_width="349dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="19dp"
-        android:hint="@string/name_hint" />
+    <Button
+        android:id="@+id/idbuttonSignup"
+        android:layout_width="158dp"
+        android:layout_height="31dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="100dp"
+        android:layout_marginEnd="122dp"
+        android:layout_marginLeft="122dp"
+        android:layout_marginRight="122dp"
+        android:layout_marginStart="122dp"
+        android:background="#D3D3D3"
+        android:hint="@string/register_hint" />
 
     <EditText
         android:id="@+id/idSignupEmail"
-        android:layout_width="346dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="19dp"
+        android:layout_above="@+id/idSignupPassword"
+        android:layout_marginBottom="15dp"
         android:hint="@string/email_hint"
         android:inputType="textEmailAddress" />
 
     <EditText
-        android:id="@+id/idSignupPassword"
-        android:layout_width="346dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="19dp"
-        android:hint="@string/password_hint"
-        android:inputType="textPassword" />
-
-    <EditText
         android:id="@+id/idRewritePassword"
-        android:layout_width="342dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="19dp"
+        android:layout_above="@+id/idbuttonSignup"
+        android:layout_marginBottom="16dp"
         android:hint="@string/re_enter_password_hint"
         android:inputType="textPassword" />
 
-    <Button
-        android:id="@+id/idbuttonSignup"
-        android:layout_width="wrap_content"
-        android:layout_height="33dp"
-        android:background="#D3D3D3"
-        android:hint="@string/register_hint" />
+    <EditText
+        android:id="@+id/idSignupPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/idRewritePassword"
+        android:layout_marginBottom="15dp"
+        android:hint="@string/password_hint"
+        android:inputType="textPassword" />
 
 
-</LinearLayout>
+
+</RelativeLayout>
