made minor aesthetic changes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginBottom="251dp"
+        android:layout_marginBottom="248dp"
         android:layout_marginEnd="86dp"
         android:layout_marginRight="86dp"
         android:background="#00FFFFFF"
@@ -38,7 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="253dp"
+        android:layout_marginBottom="250dp"
         android:layout_marginEnd="14dp"
         android:layout_marginRight="14dp"
         android:layout_toLeftOf="@+id/signIn"
@@ -50,14 +50,15 @@
 
     <Button
         android:id="@+id/createAnAccount"
-        android:layout_width="373dp"
-        android:layout_height="59dp"
+        android:layout_width="350dp"
+        android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="304dp"
         android:layout_marginEnd="21dp"
         android:layout_marginRight="21dp"
+        android:layout_marginLeft="21dp"
         android:background="#d3d3d3"
         android:text="@string/create_account"
         android:visibility="visible"
