added email verification

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,14 +9,16 @@
 
     <Button
         android:id="@+id/cancel_btn"
-        android:layout_width="85dp"
-        android:layout_height="34dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="13dp"
-        android:layout_marginStart="13dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="91dp"
+        android:layout_height="35dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="75dp"
+        android:layout_marginEnd="31dp"
+        android:layout_marginLeft="290dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginStart="290dp"
         android:background="#0064B5F6"
         android:text="@string/cancel"
         android:textColor="#818181" />
@@ -26,7 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="68dp"
         android:layout_above="@+id/username"
-        android:layout_marginBottom="4dp"
+        android:layout_marginBottom="30dp"
         android:layout_marginTop="198dp"
         android:text="@string/sign_in_text"
         android:textAlignment="center"
@@ -41,7 +43,7 @@
         android:layout_marginStart="20sp"
         android:layout_marginLeft="10sp"
         android:layout_above="@+id/password"
-        android:layout_marginBottom="22dp"
+        android:layout_marginBottom="15dp"
         android:hint="@string/email_hint"
         android:importantForAutofill="no"
         android:inputType="textPersonName" />
@@ -53,7 +55,7 @@
         android:layout_marginStart="20sp"
         android:layout_marginLeft="10sp"
         android:layout_above="@+id/login_btn"
-        android:layout_marginBottom="49dp"
+        android:layout_marginBottom="30dp"
         android:hint="@string/password_hint"
         android:importantForAutofill="no"
         android:inputType="textPassword" />
@@ -78,18 +80,16 @@
 
     <Button
         android:id="@+id/forgot_btn"
-        android:layout_width="146dp"
-        android:layout_height="37dp"
+        android:layout_width="127dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="150dp"
-        android:layout_marginEnd="242dp"
-        android:layout_marginLeft="14dp"
-        android:layout_marginRight="242dp"
-        android:layout_marginStart="14dp"
+        android:layout_marginBottom="75dp"
+        android:layout_marginEnd="254dp"
+        android:layout_marginLeft="31dp"
+        android:layout_marginRight="254dp"
+        android:layout_marginStart="31dp"
         android:background="#00FFFFFF"
         android:shadowColor="@color/colorPrimary"
         android:text="@string/forgot_password"
