--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -30,20 +30,20 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="252dp"
+        android:layout_marginBottom="175dp"
         android:layout_marginEnd="130dp"
         android:layout_marginLeft="133dp"
         android:layout_marginRight="130dp"
         android:layout_marginStart="133dp"
         android:background="#D3D3D3"
-        android:hint="@string/register_hint" />
+        android:hint="@string/Submit" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="392dp"
         android:layout_height="63dp"
         android:layout_above="@+id/idSignupEmail"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="30dp"
         android:text="@string/create_account_text"
         android:textAlignment="center"
         android:textSize="30sp" />
@@ -61,7 +61,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/idbuttonSignup"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="30dp"
         android:hint="@string/re_enter_password_hint"
         android:inputType="textPassword" />
 
