--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".Activities.HomeActivity">
 
+    <include layout="@layout/app_bar_layout" android:id="@+id/home_page_toolbar" />
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
