--- a/app/src/main/res/layout/activity_user_settings.xml
+++ b/app/src/main/res/layout/activity_user_settings.xml
@@ -32,7 +32,17 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="406dp"
         android:text="@string/name"
-        android:textSize="30dp" />
+        android:textSize="30sp" />
+
+    <TextView
+        android:id="@+id/settings_status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="336dp"
+        android:text="@string/status"
+        android:textSize="25sp" />
 
     <Button
         android:id="@+id/btn_delete"
@@ -69,15 +79,5 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="31dp"
         android:text="@string/change_profile_picture" />
-
-    <TextView
-        android:id="@+id/settings_status"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="336dp"
-        android:text="@string/status"
-        android:textSize="25dp" />
 
 </RelativeLayout>
