username feature added to sign up and user settings

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,13 +52,16 @@
         android:id="@+id/createAnAccount"
         android:layout_width="350dp"
         android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginBottom="304dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="40dp"
+        android:layout_marginLeft="40dp"
         android:layout_marginEnd="21dp"
         android:layout_marginRight="21dp"
-        android:layout_marginLeft="21dp"
+        android:layout_marginBottom="304dp"
         android:background="#d3d3d3"
         android:text="@string/create_account"
         android:visibility="visible"
