--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -42,11 +42,20 @@
         android:id="@+id/textView3"
         android:layout_width="392dp"
         android:layout_height="63dp"
-        android:layout_above="@+id/idSignupEmail"
+        android:layout_above="@+id/idSignupUsername"
         android:layout_marginBottom="30dp"
         android:text="@string/create_account_text"
         android:textAlignment="center"
         android:textSize="30sp" />
+    <EditText
+        android:id="@+id/idSignupUsername"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/idSignupEmail"
+        android:layout_marginBottom="15dp"
+        android:hint="@string/username_hint"
+        android:inputType="textEmailAddress" />
+
     <EditText
         android:id="@+id/idSignupEmail"
         android:layout_width="match_parent"
