--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -7,7 +7,7 @@
         android:title="@string/account_setting" />
     <item
         android:id="@+id/home_all"
-        android:title="@string/all_users" />
+        android:title="@string/add_friends" />
     <item
         android:id="@+id/home_logout"
         android:title="@string/log_out" />
