--- a/app/src/main/res/layout/fragment_friend_requests.xml
+++ b/app/src/main/res/layout/fragment_friend_requests.xml
@@ -5,10 +5,14 @@
     android:layout_height="match_parent"
     tools:context=".Activities.FriendRequestsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/fr_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/friend_requests_page" />
-
+        android:layout_height="match_parent"/>
+    <ProgressBar
+        android:id="@+id/req_progress"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        />
 </FrameLayout>
