Added the following features and fixes:  if searching for someone that sent you a friend request you will be able to accept or decline in the search feature  added the accept functionality in the friend request adds the friend to your contact list  added a unfriend button  when you tap on a contact it takes you to a chat with them(not yet implemented)  fixed loading screen in friend request and contacts  updated the contact list to only show users that are friends and not all the users

--- a/app/src/main/res/layout/fragment_contacts.xml
+++ b/app/src/main/res/layout/fragment_contacts.xml
@@ -1,13 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activities.ContactsFragment">
-
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
+        android:id="@+id/cnt_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"/>
+    <ProgressBar
+        android:id="@+id/cnt_progress"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        />
+    <TextView
+        android:id="@+id/nodatatext_cnt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/no_contacts_found"
+        android:layout_gravity="center"
+        android:textAlignment="center"
+        android:textSize="19dp"
+        android:visibility="gone"
+        />
 
-</LinearLayout>
+</FrameLayout>
