--- a/app/src/main/res/layout/fragment_friend_requests.xml
+++ b/app/src/main/res/layout/fragment_friend_requests.xml
@@ -15,4 +15,15 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         />
+    <TextView
+        android:id="@+id/nodatatext"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/no_request_found"
+        android:layout_gravity="center"
+        android:textAlignment="center"
+        android:textSize="19dp"
+        android:visibility="gone"
+        />
+
 </FrameLayout>
